Bug 155364 - Forms - Table controls: Buttons in the Navigation bar get smaller when zooming form
Summary: Forms - Table controls: Buttons in the Navigation bar get smaller when zoomin...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-05-17 01:10 UTC by George
Modified: 2024-05-29 06:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
image of the graphical element (navigation bar in table) (550.62 KB, image/jpeg)
2023-05-17 01:14 UTC, George
Details
Open the form. Switch Zoom by Ctrl+Mousewheel (13.35 KB, application/vnd.oasis.opendocument.database)
2024-01-10 07:08 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description George 2023-05-17 01:10:08 UTC
Description:
There are a couple of graphical issues I can’t resolve in Base GUI. I’m not sure if they can be adjusted, or if they are a bug.
In all “table” style graphics, the default buttons in the Navigation bar (the First, Previous, Next, Last, & New buttons) are so small, it is difficult to accurately choose the correct one. My current working monitor resolution is 4k.

Steps to Reproduce:
1.With Windows 10 Display setting set to 3840x2160, open any component with a table graphic (actual graphical tables, or tables in forms, for example).
2.Try to use navigation bar at bottom of table.
3.Buttons (First, Previous, Next, Last, & New buttons) are so small, they are both difficult to see, and difficult to accurately select.

Actual Results:
I eventually make the correct selection, but sometimes it is after accidentally selecting the incorrect button, because they are so crowded together. Sometimes, after more than one try.

Expected Results:
Providing a way to adjust the size of these graphical elements would be optimal.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.4.6.2 (x64) / LibreOffice Community
Build ID: 5b1f5509c2decdade7fda905e3e1429a67acd63d
CPU threads: 48; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
I realize that I could put custom navigation bar elements into forms, but except for this issue, the default location can be very convenient. Also, this would not help with this issue in some other table display contexts.
MY SETUP
Windows 10 (64 bit)
Windows Version 22H2
4k monitor
GPU - AMD Radeon PRO W6800, VRAM 32,752 MB GDDR6
CPU - AMD Ryzen Threadripper 3960X 24-Core Processor 24 Cores
RAM - 64 GB
Display resolution - 3840x2160
Scaling - 250%
Thanks for your consideration.
Comment 1 George 2023-05-17 01:14:06 UTC
Created attachment 187342 [details]
image of the graphical element (navigation bar in table)
Comment 2 Robert Großkopf 2023-05-17 07:09:55 UTC
I could confirm the buggy behavior with OpenSUSE 15.4 and every installed version of LO.

Buttons in navigation bar of a table control won't change width when the form has been zoomed. It will get appear smaller when setting the zoom level to more than 100%. Only the height of the buttons will be changed.

Have set Component to UI, because it isn't a special Base bug (for database only)

Have set version to LO 7.1.0.3, because the bug doesn't appear in LO 7.0.5.2
Comment 3 raal 2024-01-08 22:18:30 UTC
Please can you attach some test base file? Thank you.
Comment 4 George 2024-01-10 01:30:41 UTC
(In reply to raal from comment #3)
> Please can you attach some test base file? Thank you.

My Base attachment (Breaker box.odb) was not accepted. Either I'm not sure exactly what you are asking for, or I'm doing it incorrectly. A more detailed request would be helpful. Thank you.
George Turner
Comment 5 Robert Großkopf 2024-01-10 07:08:27 UTC
Created attachment 191835 [details]
Open the form. Switch Zoom by Ctrl+Mousewheel

Form shows the different navigation bar bugs.
This bug is for tablecontrol only: 
have a look at the buttons at the button of the tablecontrol. Zooming in will show them higher and higher, but the width won't be zoomed.
This bug doesn't happen in LO 7.0.5.2 on OpenSUSE here.

The other bug, not mentioned here and not a regression: Navigation bar of the navigation bar control will always show the graphic buttons with the same height. Zooming wont show any changing here, so sometimes buttons are very small (zooming greater than 100%) ore aren't available, because the control is to small (zooming less than 80%).
Comment 6 George 2024-01-11 00:06:53 UTC
At least with the Navigation Bar, users can choose "large" in the Icon Size property for the Navigation Bar control, which can compensate, somewhat.
I will try installing LO 7.0.5.2 and see how this behaves.
Comment 7 George 2024-01-11 00:35:57 UTC
Just tried LO 7.0.5.2, and you are correct. The bug does not appear in the tables, or the Table Control in my forms. Thanks for passing on this information.
Comment 8 raal 2024-01-11 15:50:48 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.1.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 0f52906123b67be9e57c7f5ed74137cb5dc0aef7 is the first bad commit
commit 0f52906123b67be9e57c7f5ed74137cb5dc0aef7
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Jul 27 20:17:36 2020 +0200

    source 32f0a170c941522d0b7c0594aa4627a84a0d1b38

99445: weld NavigationBar | https://gerrit.libreoffice.org/c/core/+/99445
Comment 9 Commit Notification 2024-05-26 18:21:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f0960e05c2f540c99062867236419c2a70c1160b

Resolves: tdf#155364 resize buttons and change widget font sizes on zoom

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2024-05-26 18:43:06 UTC
that should hopefully resolve it
Comment 11 Robert Großkopf 2024-05-29 06:37:00 UTC
Could confirm the bug for buttons in navigation bar of a table control has been fixed in daily build form 2024-05-29

Thanks Caolán!